refactor(styles): replace @import with @use for better modularity
This commit updates the SCSS files to use the `@use` rule instead of `@import` for better modularity and to avoid potential conflicts with global variables. The change also includes updating the variable reference in the `.test` class to use CSS custom properties.

--- a/app/global.scss
+++ b/app/global.scss
@@ -1,6 +1,6 @@
-@import "/styles/reset";
-@import "/styles/variables";
-@import "/styles/mixins";
+@use "../styles/reset";
+@use "../styles/variables";
+@use "../styles/mixins";
 
 @tailwind base;
 @tailwind components;
@@ -20,5 +20,5 @@
   }
 }
 .test{
-  background-color: $primary;
+  background-color: var(--primary);
 }
