--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,6 +1,3 @@
-@use "../styles/reset";
-@use "../styles/variables";
-@use "../styles/mixins";
 
 @tailwind base;
 @tailwind components;
@@ -21,4 +18,7 @@
 }
 .test{
   background-color: var(--primary);
+}
+.title{
+  font-weight: 600;
 }
